updated code with more accurate and improved